cloudformation/cloudformation-sysops/5-0-cfn-signal-jyu-200.yaml
Parameters:
  SSHKey:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance

Resources:
  MyInstance:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: us-east-1a
      ImageId: ami-009d6802948d06e52
      InstanceType: t2.micro
      KeyName: !Ref SSHKey
      SecurityGroups:
        - !Ref SSHSecurityGroup
      # we install our web server with user data
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          # Get the latest CloudFormation package
          yum update -y aws-cfn-bootstrap
          # Start cfn-init
          /opt/aws/bin/cfn-init -s ${AWS::StackId} -r MyInstance --region ${AWS::Region}
          # Start cfn-signal to the wait condition - let the CF to hang for a few moments until absolute 200
          /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackId} --resource DedicatedWaitCondition --region ${AWS::Region}
      Tags:
        - Key: "Name"
          Value: "MyInstance-cfn_init-JYU"
    Metadata:
      Comment: Install a simple Apache HTTP page
      AWS::CloudFormation::Init:
        config:
          packages:
            yum:
              httpd: []
          files:
            "/var/www/html/index.html":
              content: |
                <h1>Hello World from EC2 instance by Joseph!</h1>
                <p>This was created using cfn-init for the second time</p>
              mode: "000644"
          commands:
            hello:
              command: "echo 'hello world from Joseph'"
          services:
            sysvinit:
              httpd:
                enabled: "true"
                ensureRunning: "true"

  # The wait signal does NOT enforce the whole process to wait at least 10 minutes (it ONLY specify the MAXIMUM allowed range to wait)
  DedicatedWaitCondition:
    Type: AWS::CloudFormation::WaitCondition
    CreationPolicy:
      ResourceSignal:
        Timeout: PT5M # Pending time for 10 Minutes
        Count: 1 # Count of ONLY 1 instance (Number of instances created by this stack)

  # our EC2 security group
  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SSH and HTTP
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
